--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "crc-32": "^1.2.0",
     "pako": "^2.0.3",
     "vue": "^2.6.11",
     "vue-cli-plugin-s3-deploy": "^3.0.0",
