--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "crc-32": "^1.2.0",
+    "file-saver": "^2.0.5",
     "pako": "^2.0.3",
     "vue": "^2.6.12",
     "vue-cli-plugin-s3-deploy": "^3.0.0",
