--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,13 @@
     "deploy:cleanup": "vue-cli-service s3-deploy-cleanup"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
+    "crc-32": "^1.2.0",
+    "file-saver": "^2.0.5",
+    "pako": "^2.0.3",
+    "vue": "^2.6.12",
     "vue-cli-plugin-s3-deploy": "^3.0.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -32,7 +37,7 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-cli-plugin-s3-deploy-cleanup": "~1.0.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
     "root": true,
