--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
     "deploy:cleanup": "vue-cli-service s3-deploy-cleanup"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
