--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "pako": "^2.0.3",
     "vue": "^2.6.12",
     "vue-cli-plugin-s3-deploy": "^3.0.0",
+    "vue-mq": "^1.0.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
