Got saving retron to emu all working

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "crc-32": "^1.2.0",
     "file-saver": "^2.0.5",
     "pako": "^2.0.3",
+    "path": "^0.12.7",
     "vue": "^2.6.12",
     "vue-cli-plugin-s3-deploy": "^3.0.0",
     "vue-mq": "^1.0.1",
