--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,19 @@
     "deploy:cleanup": "vue-cli-service s3-deploy-cleanup"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "crc-32": "^1.2.0",
     "file-saver": "^2.0.5",
     "pako": "^2.0.3",
+    "path": "^0.12.7",
     "vue": "^2.6.12",
     "vue-cli-plugin-s3-deploy": "^3.0.0",
+    "vue-mq": "^1.0.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
