Add support for converting emulator files to the Retron5 format (#3)
* Move conversion direction indicator into its own component

* Add synced prop to set conversion direction

* Use prop to set vertical or horizontal orientation for arrows

* Remove old file

* Converted direction buttons into radio groups

* Prettier button style

* Update linting rules re long lines

* Get conversion direction value propagated back to parent component

* Minor cleanup

* Put output filename in its own component so it can be reused

* Moved input file into its own component so it can be reused

* Able to convert from emulator to retron5

* Fixed up size of text boxes

Co-authored-by: Euan <euan_forrester@hotmail.com>

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,7 +56,18 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {},
+    "rules": {
+      "max-len": [
+        "error",
+        {
+          "code": 200,
+          "tabWidth": 2,
+          "ignoreComments": true,
+          "ignoreTrailingComments": true,
+          "ignoreUrls": true
+        }
+      ]
+    },
     "overrides": [
       {
         "files": [
