Invalidate CloudFront when deploying prod

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,5 @@
 VUE_APP_S3D_BUCKET="save-file-converter-prod"
 VUE_APP_S3D_CLOUDFRONT_ID="E3OXBP0D4X9GKW"
+VUE_APP_S3D_ENABLE_CLOUDFRONT=true
+VUE_APP_S3D_CLOUDFRONT_MATCHERS=/index.html,/styles/*.css,/*.png
 VUE_APP_S3D_DEPLOY_PATH="/"
