--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "crc-32": "^1.2.0",
+    "dayjs": "^1.10.4",
     "file-saver": "^2.0.5",
     "pako": "^2.0.3",
     "path": "^0.12.7",
