Parsed the gametdb file and returned tbe correct platform

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "crc-32": "^1.2.0",
     "dayjs": "^1.10.4",
     "file-saver": "^2.0.5",
+    "node-html-parser": "^4.0.0",
     "pako": "^2.0.3",
     "path": "^0.12.7",
     "pkcs7": "^1.0.4",
