Added support for Wii Virtual Console (#33)
* Added basic scaffolding

* More scaffolding

* Added util functions to encrypt/decrypt array buffer, plus added test

* Got decryption of Wii save working, need to fix test of encrypt/decrypt

* Fix encrypt/decrypt test by manually adding/removing padding

* Pulled out the game title and subtitle

* Parsed backup header

* Begin parsing each file

* Added function to round up to nearest 64 bytes

* Decrypt the file within the Wii save data using the IV found there

* Replace the Wii encryption key in our test with something generic

* Added test against output from other online save converter. Currently fails

* Got the file downloading correctly in the UI

* Fixed typo and added more Wii resources to readme

* Added another Wii resource to the readme

* Moved Wii save format stuff into its own directory

* Added failing tests for GetVcPlatform

* Renamed GetVcPlatform back to GetPlatform

* Got http calls working with temp (?) fix

* Trying to get timeouts working

* Got timeouts working

* Parsed the gametdb file and returned tbe correct platform

* Added comment

* Add support for Homebrew Wii titles, and added more defensive coding against potential future HTML changes

* Added comment

* Found a CORS proxy to route our GetPlatform() requests through, and hooked it up to the front end

* Updated comment

* Added retries to GetPlatform

* Make http client a dependency injection

* Fix typo in test

* Added local copies of the various html pages from gametdb and a mock http client to load them

* Added support for parsing the Sega formats

* Added tests for the various N64 file sub-types

* Added tests for the various other save formats

* Moved around the various Wii test data files

* Added notes re Neo Geo saves

* Added link to MemcardRex converter, updated descriptions of the other converters

* Tweaks to Other Converters page

* Added inf

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,18 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
+    "axios": "^0.21.1",
+    "axios-retry": "^3.1.9",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "crc-32": "^1.2.0",
     "dayjs": "^1.10.4",
     "file-saver": "^2.0.5",
+    "node-html-parser": "^4.0.0",
     "pako": "^2.0.3",
     "path": "^0.12.7",
+    "pkcs7": "^1.0.4",
     "vue": "^2.6.12",
     "vue-cli-plugin-s3-deploy": "^3.0.0",
     "vue-mq": "^1.0.1",
