Add function to encode N64 text

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "crc-32": "^1.2.0",
     "dayjs": "^1.10.4",
     "file-saver": "^2.0.5",
+    "lodash-es": "^4.17.21",
     "node-html-parser": "^4.0.0",
     "pako": "^2.0.3",
     "path": "^0.12.7",
