--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "crc-32": "^1.2.0",
     "dayjs": "^1.10.4",
     "file-saver": "^2.0.5",
+    "lodash-es": "^4.17.21",
     "node-html-parser": "^4.0.0",
     "pako": "^2.0.3",
     "path": "^0.12.7",
@@ -46,6 +47,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
+    "seedrandom": "^3.0.5",
     "vue-cli-plugin-s3-deploy-cleanup": "~1.0.1",
     "vue-template-compiler": "^2.6.12"
   },
