--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
+    "@gtm-support/vue2-gtm": "^1.2.0",
     "axios": "^0.21.2",
     "axios-retry": "^3.1.9",
     "bootstrap": "^4.6.0",
