Enable/disable GTM and its debug prints based on dev vs prod build

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -3,3 +3,6 @@ VUE_APP_S3D_CLOUDFRONT_ID="E3OXBP0D4X9GKW"
 VUE_APP_S3D_ENABLE_CLOUDFRONT=true
 VUE_APP_S3D_CLOUDFRONT_MATCHERS=/index.html,/styles/*.css,/*.png
 VUE_APP_S3D_DEPLOY_PATH="/"
+
+VUE_APP_ENABLE_GOOGLE_TAG_MANAGER=true
+VUE_APP_DEBUG_GOOGLE_TAG_MANAGER=false
