--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,7 +50,9 @@
     "eslint-plugin-vue": "^6.2.2",
     "seedrandom": "^3.0.5",
     "vue-cli-plugin-s3-deploy-cleanup": "~1.0.1",
-    "vue-template-compiler": "^2.6.12"
+    "vue-cli-plugin-webpack-bundle-analyzer": "~4.0.0",
+    "vue-template-compiler": "^2.6.12",
+    "webpack-bundle-analyzer": "^4.5.0"
   },
   "eslintConfig": {
     "root": true,
