Rather than import the huge node crypto module, just import other modules that only do the bits that we need. Reduces the size of the PSP and Wii bundles significantly, although our entrypoint is still 514kB thanks to chunk-vendors

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,10 @@
     "axios-retry": "^3.1.9",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "browserify-aes": "^1.2.0",
     "core-js": "^3.6.5",
     "crc-32": "^1.2.0",
+    "create-hash": "^1.2.0",
     "dayjs": "^1.10.4",
     "file-saver": "^2.0.5",
     "lodash-es": "^4.17.21",
