Reduced entrypoint size from 1.09MB -> 463kB (#64)
* Updated webpack-bundle-analyzer

* Split our routes into separate files. Reduces entrypoint size from 1.09 MB -> 514 kB

* Split crypto functions out of Util class so they don't have to be included everywhere

* Rather than import the huge node crypto module, just import other modules that only do the bits that we need. Reduces the size of the PSP and Wii bundles significantly, although our entrypoint is still 514kB thanks to chunk-vendors

* Move bootstrap popover from the main bundle to just the components where it's needed. Reduces entrypoint to 463kB

* Disable the webpack bundle analyzer

* Disable source maps in prod

Co-authored-by: Euan <euan_forrester@hotmail.com>

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,10 @@
     "axios-retry": "^3.1.9",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "browserify-aes": "^1.2.0",
     "core-js": "^3.6.5",
     "crc-32": "^1.2.0",
+    "create-hash": "^1.2.0",
     "dayjs": "^1.10.4",
     "file-saver": "^2.0.5",
     "lodash-es": "^4.17.21",
@@ -50,7 +52,9 @@
     "eslint-plugin-vue": "^6.2.2",
     "seedrandom": "^3.0.5",
     "vue-cli-plugin-s3-deploy-cleanup": "~1.0.1",
-    "vue-template-compiler": "^2.6.12"
+    "vue-cli-plugin-webpack-bundle-analyzer": "~4.0.0",
+    "vue-template-compiler": "^2.6.12",
+    "webpack-bundle-analyzer": "^4.5.0"
   },
   "eslintConfig": {
     "root": true,
