Add unit tests to autobuild

--- a/frontend/buildspec.yml
+++ b/frontend/buildspec.yml
@@ -11,6 +11,7 @@ phases:
     commands:
       - cd frontend
       - yarn install
+      - yarn test:unit
   build:
     commands:
       - yarn build --mode=$ENVIRONMENT
