--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -1,7 +1,7 @@
 # This is added to the various bucket names so that they don't conflict with other instances of this project
 # e.g. if it's set to "-dave-" then the bucket "sample-project-dev" will become "sample-project-dave-dev"
 bucketname_user_string = ""
-alarms_email = ""
+notifications_email = ""
 application_domain = ""
 route_53_zone_id = "" # Zone created by Route 53 for our application domain
 project_github_location = "https://github.com/euan-forrester/save-file-converter"
