--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "axios-retry": "^3.1.9",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "browserfs": "^1.4.3",
     "browserify-aes": "^1.2.0",
     "browserify-des": "^1.0.2",
     "core-js": "^3.6.5",
@@ -50,12 +51,12 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
+    "pkcs7": "^1.0.4",
     "seedrandom": "^3.0.5",
     "vue-cli-plugin-s3-deploy-cleanup": "^1.0.5",
     "vue-cli-plugin-webpack-bundle-analyzer": "~4.0.0",
     "vue-template-compiler": "^2.6.12",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "pkcs7": "^1.0.4"
+    "webpack-bundle-analyzer": "^4.5.0"
   },
   "eslintConfig": {
     "root": true,
