Added tests for encrypted executable present or not, and magic matching or not

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /test
 /frontend/stats.json
 /frontend/tests/unit/rom-formats/data/psp/retail/*
+/frontend/tests/unit/rom-formats/data/psp/make-iso/*
+/frontend/tests/unit/rom-formats/data/psp/*
