Added support for parsing PSP .ISO files, and extracting their executables (#75)
* First successful parsing of a PSP .ISO file

* Parse an ISO to get an executable

* Parse PARAM.SFO

* Added some comments describing the file format a little better

* Reorganized code slightly for PARAM.SFO parsing

* Pass through game ID

* Added tests for encrypted executable present or not, and magic matching or not

* Added tests for alternative boot locations. Fixed paths

* Added specific test for parsing PARAM.SFO

* Add flag to test ISOs

* Simplify skipping ISO parsing if desired

* Added tests for more retail ISOs

Co-authored-by: Euan <euan_forrester@hotmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .DS_Store
 /test
 /frontend/stats.json
+/frontend/tests/unit/rom-formats/data/psp/retail/*
+/frontend/tests/unit/rom-formats/data/psp/make-iso/*
