--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 /frontend/stats.json
 /frontend/tests/unit/rom-formats/data/psp/retail/*
 /frontend/tests/unit/rom-formats/data/psp/make-iso/*
+/frontend/tests/unit/rom-formats/data/sms/retail/*
 /frontend/tests/unit/save-formats/data/flashcarts/goombaemulator/retail/*
 /frontend/tests/unit/save-formats/data/flashcarts/pocketnesemulator/retail/*
+/frontend/tests/unit/save-formats/data/flashcarts/smsadvanceemulator/retail/*
 /frontend/tests/config.local.js
