--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@
 /frontend/tests/data/save-formats/flashcarts/gba/goombaemulator/retail/*
 /frontend/tests/data/save-formats/flashcarts/gba/pocketnesemulator/retail/*
 /frontend/tests/data/save-formats/flashcarts/gba/smsadvanceemulator/retail/*
+/frontend/tests/data/save-formats/flashcarts/n64/gb64emulator/retail/*
 /frontend/tests/config.local.js
