--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "create-hash": "^1.2.0",
     "dayjs": "^1.10.4",
     "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "lodash-es": "^4.17.21",
     "node-html-parser": "^4.0.0",
     "pako": "^2.0.3",
