--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@
 /frontend/tests/data/save-formats/flashcarts/gba/pocketnesemulator/retail/*
 /frontend/tests/data/save-formats/flashcarts/gba/smsadvanceemulator/retail/*
 /frontend/tests/data/save-formats/flashcarts/n64/gb64emulator/retail/*
+/frontend/tests/data/save-formats/segasaturn/*-uncompressed.*
 /frontend/tests/config.local.js
