Downgrade vscode vue extension because we're still on vue 2

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@vue/language-server": "~3.0.0",
     "@vue/cli-plugin-babel": "~5.0.4",
     "@vue/cli-plugin-eslint": "~5.0.4",
     "@vue/cli-plugin-router": "~5.0.4",
